test/integration/bad/new/bad_constrained_type_in_fn4.stan
functions{
  // TODO: would be nice to specialize for this mistake
  void foo(int<lower=0> x){
    print(x);
  }
}
